list(APPEND ptzf_controller_entry_libs ptzf_trace)
list(APPEND ptzf_controller_entry_libs ptzf_controller_message_handler)
list(APPEND ptzf_controller_entry_libs ptzf_controller_initializer)
list(APPEND ptzf_controller_entry_libs ptzf_controller_finalizer)
list(APPEND ptzf_controller_entry_libs ptz_trace_controller)
list(APPEND ptzf_controller_entry_libs ptz_trace_controller_thread)
list(APPEND ptzf_controller_entry_libs visca_server_message_if)
list(APPEND ptzf_controller_entry_libs preset_manager_message_if)
list(APPEND ptzf_controller_entry_libs event_router_if)
list(APPEND ptzf_controller_entry_libs ptzf_status_infra_if)
list(APPEND ptzf_controller_entry_libs ptzf_config_infra_if)
list(APPEND ptzf_controller_entry_libs ptzf_infra_entry)

cxx_static_library(ptzf_controller_entry
  "${ptzf_controller_entry_libs}"
  ptzf_controller_entry.cpp
  power_status_event_listener_ptzf_on_boot.cpp)

list(APPEND power_status_event_listener_ptzf_on_boot_test_libs ptzf_controller_entry)
list(APPEND power_status_event_listener_ptzf_on_boot_test_libs ptzf_status_infra_if_mock)
list(APPEND power_status_event_listener_ptzf_on_boot_test_libs ptzf_config_infra_if_mock)
list(APPEND power_status_event_listener_ptzf_on_boot_test_libs ptz_trace_if_mock)

cxx_gmock_executable(power_status_event_listener_ptzf_on_boot_test
  "${power_status_event_listener_ptzf_on_boot_test_libs}"
  test/power_status_event_listener_ptzf_on_boot_test.cpp)
add_library_tests(ptzf_controller_entry power_status_event_listener_ptzf_on_boot_test)

list(APPEND ptzf_controller_message_handler_libs ptzf_status)
list(APPEND ptzf_controller_message_handler_libs ptzf_config)
list(APPEND ptzf_controller_message_handler_libs error_notifier_message_if)
list(APPEND ptzf_controller_message_handler_libs ptzf_status_if)
list(APPEND ptzf_controller_message_handler_libs ptzf_config_if)
list(APPEND ptzf_controller_message_handler_libs pt_micon_power_infra_if)
list(APPEND ptzf_controller_message_handler_libs event_router_receiver)
list(APPEND ptzf_controller_message_handler_libs ptzf_controller)
list(APPEND ptzf_controller_message_handler_libs pan_tilt_limit_controller)
list(APPEND ptzf_controller_message_handler_libs ptz_trace_if)
list(APPEND ptzf_controller_message_handler_libs database_initialize_if)
list(APPEND ptzf_controller_message_handler_libs ptzf_backup_infra_if)
list(APPEND ptzf_controller_message_handler_libs ptzf_info_notifier)
list(APPEND ptzf_controller_message_handler_libs ptzf_initialize_infra_if)
list(APPEND ptzf_controller_message_handler_libs ptzf_finalize_infra_if)
list(APPEND ptzf_controller_message_handler_libs ptzf_zoom_infra_if)
list(APPEND ptzf_controller_message_handler_libs ptzf_focus_infra_if)
list(APPEND ptzf_controller_message_handler_libs ptzf_if_clear_infra_if)
list(APPEND ptzf_controller_message_handler_libs ptzf_pan_tilt_lock_infra_if)
list(APPEND ptzf_controller_message_handler_libs bizglobal)
list(APPEND ptzf_controller_message_handler_libs power_status_if)
list(APPEND ptzf_controller_message_handler_libs visca_server_internal_mode_manager)
list(APPEND ptzf_controller_message_handler_libs visca_status_if)
list(APPEND ptzf_controller_message_handler_libs preset_status_if)
list(APPEND ptzf_controller_message_handler_libs video_status_if)
list(APPEND ptzf_controller_message_handler_libs ptz_trace_status_if)
list(APPEND ptzf_controller_message_handler_libs menu_status)
list(APPEND ptzf_controller_message_handler_libs camera_osd_status_if)
if(CMAKE_CROSSCOMPILING)
  list(APPEND ptzf_controller_message_handler_libs metadata_control_if)
else(CMAKE_CROSSCOMPILING)
  list(APPEND ptzf_controller_message_handler_libs metadata_control_if_mock)
endif(CMAKE_CROSSCOMPILING)

cxx_static_library(ptzf_controller_message_handler
  "${ptzf_controller_message_handler_libs}"
  ptzf_controller_message_handler.cpp
  ptzf_controller_power_request_event_listener.cpp
  ptzf_controller_thread.cpp
  infra/sequence_id_controller.cpp)

list(APPEND ptzf_controller_message_handler_test_libs ptzf_controller_initializer)
list(APPEND ptzf_controller_message_handler_test_libs ptzf_controller_finalizer_mock)
list(APPEND ptzf_controller_message_handler_test_libs ptz_trace_controller_dummy)
list(APPEND ptzf_controller_message_handler_test_libs preset_manager_message_if_mock)
list(APPEND ptzf_controller_message_handler_test_libs visca_server_message_if_mock)
list(APPEND ptzf_controller_message_handler_test_libs visca_status_if_mock)
list(APPEND ptzf_controller_message_handler_test_libs event_router_if_mock)
list(APPEND ptzf_controller_message_handler_test_libs common_core)
list(APPEND ptzf_controller_message_handler_test_libs common_timer)
list(APPEND ptzf_controller_message_handler_test_libs pan_tilt_limit_controller)
list(APPEND ptzf_controller_message_handler_test_libs ptz_trace_if_mock)
list(APPEND ptzf_controller_message_handler_test_libs ptzf_controller_mock)
list(APPEND ptzf_controller_message_handler_test_libs ptzf_initializer_infra_if_mock)
list(APPEND ptzf_controller_message_handler_test_libs ptzf_pan_tilt_infra_if_mock)
list(APPEND ptzf_controller_message_handler_test_libs ptzf_zoom_infra_if_mock)
list(APPEND ptzf_controller_message_handler_test_libs ptzf_focus_infra_if_mock)
list(APPEND ptzf_controller_message_handler_test_libs ptzf_if_clear_infra_if_mock)
list(APPEND ptzf_controller_message_handler_test_libs database_initialize_if_mock)
list(APPEND ptzf_controller_message_handler_test_libs ptzf_initialize_infra_if_mock)
list(APPEND ptzf_controller_message_handler_test_libs ptzf_finalize_infra_if_mock)
list(APPEND ptzf_controller_message_handler_test_libs ptzf_backup_infra_if_mock)
list(APPEND ptzf_controller_message_handler_test_libs ptz_trace_status_if_mock)
list(APPEND ptzf_controller_message_handler_test_libs metadata_collector_if_fake)
list(APPEND ptzf_controller_message_handler_test_libs ptzf_pan_tilt_lock_infra_if_mock)
list(APPEND ptzf_controller_message_handler_test_libs ptzf_message_if_mock)
list(APPEND ptzf_controller_message_handler_test_libs power_status_if_mock)
list(APPEND ptzf_controller_message_handler_test_libs pt_micon_power_infra_if)
list(APPEND ptzf_controller_message_handler_test_libs event_router_receiver)
list(APPEND ptzf_controller_message_handler_test_libs visca_server_internal_mode_manager)
list(APPEND ptzf_controller_message_handler_test_libs preset_status_if_mock)
list(APPEND ptzf_controller_message_handler_test_libs menu_status_mock)
list(APPEND ptzf_controller_message_handler_test_libs camera_osd_status_if_mock)
list(APPEND ptzf_controller_message_handler_test_libs ptzf_info_notifier)
list(APPEND ptzf_controller_message_handler_test_libs video_status_if_mock)
if (NOT CMAKE_CROSSCOMPILING)
  list(APPEND ptzf_controller_message_handler_test_libs metadata_collector_if_fake)
else(NOT CMAKE_CROSSCOMPILING)
  list(APPEND ptzf_controller_message_handler_test_libs metadata_collector_if)
endif (NOT CMAKE_CROSSCOMPILING)

cxx_gmock_executable(ptzf_controller_message_handler_test
  "${ptzf_controller_message_handler_test_libs}"
  test/ptzf_controller_message_handler_test.cpp
  ptzf_controller_message_handler.cpp
  ptzf_controller_power_request_event_listener.cpp
  ptzf_controller_thread.cpp
  infra/sequence_id_controller_mock.cpp)
add_library_tests(ptzf_controller_message_handler ptzf_controller_message_handler_test)

list(APPEND ptzf_controller_initializer_libs ptzf_status)
list(APPEND ptzf_controller_initializer_libs ptzf_config)
list(APPEND ptzf_controller_initializer_libs error_notifier_message_if)
list(APPEND ptzf_controller_initializer_libs pan_tilt_limit_position)
list(APPEND ptzf_controller_initializer_libs video_status_if)
list(APPEND ptzf_controller_initializer_libs ptz_trace_if)
if(NOT CMAKE_CROSSCOMPILING)
  list(APPEND ptzf_controller_initializer_libs ptzf_status_if_mock)
  list(APPEND ptzf_controller_initializer_libs ptzf_config_if_mock)
  list(APPEND ptzf_controller_initializer_libs metadata_control_if_mock)
else(NOT CMAKE_CROSSCOMPILING)
  list(APPEND ptzf_controller_initializer_libs ptzf_status_if)
  list(APPEND ptzf_controller_initializer_libs ptzf_config_if)
  list(APPEND ptzf_controller_initializer_libs metadata_control_if)
  list(APPEND ptzf_controller_initializer_libs ptzf_initializer_infra_if)
endif(NOT CMAKE_CROSSCOMPILING)

cxx_static_library(ptzf_controller_initializer
  "${ptzf_controller_initializer_libs}"
  ptzf_controller_initializer.cpp)

list(APPEND ptzf_controller_initializer_test_libs ptzf_controller_initializer)
list(APPEND ptzf_controller_initializer_test_libs visca_server_message_if_mock)
list(APPEND ptzf_controller_initializer_test_libs common_core)
list(APPEND ptzf_controller_initializer_test_libs common_timer)
list(APPEND ptzf_controller_initializer_test_libs video_status_if_mock)
list(APPEND ptzf_controller_initializer_test_libs ptz_trace_if_mock)
list(APPEND ptzf_controller_initializer_test_libs ptzf_initializer_infra_if_mock)
cxx_gmock_executable(ptzf_controller_initializer_test
 "${ptzf_controller_initializer_test_libs}"
  test/ptzf_controller_initializer_test.cpp)
add_library_tests(ptzf_controller_initializer ptzf_controller_initializer_test)

list(APPEND ptzf_controller_finalizer_libs common_core)
list(APPEND ptzf_controller_finalizer_libs common_timer)
list(APPEND ptzf_controller_finalizer_libs visca_server_message_if)
list(APPEND ptzf_controller_finalizer_libs ptzf_finalizer_infra_if)
list(APPEND ptzf_controller_finalizer_libs ptzf_backup_infra_if)
list(APPEND ptzf_controller_finalizer_libs ptz_updater)
cxx_static_library(ptzf_controller_finalizer
  "${ptzf_controller_finalizer_libs}"
  ptzf_controller_finalizer.cpp)
cxx_static_library(ptzf_controller_finalizer_mock
  ""
  ptzf_controller_finalizer_mock.cpp)

list(APPEND ptzf_controller_finalizer_test_libs ptzf_finalizer_infra_if_mock)
list(APPEND ptzf_controller_finalizer_test_libs ptzf_backup_infra_if_mock)
list(APPEND ptzf_controller_finalizer_test_libs ptzf_status_if_mock)
list(APPEND ptzf_controller_finalizer_test_libs ptzf_config_if_mock)

list(APPEND ptzf_controller_finalizer_test_libs visca_server_message_if_mock)
cxx_gmock_executable(ptzf_controller_finalizer_test
  "ptzf_controller_finalizer;${ptzf_controller_finalizer_test_libs}"
  test/ptzf_controller_finalizer_test.cpp)
add_library_tests(ptzf_controller_finalizer ptzf_controller_finalizer_test)

cxx_static_library(ptzf_message_if
  "event_router_if;common_core;ptzf_trace;pan_tilt_limit_position"
  ptzf_message_if.cpp)
cxx_static_library(ptzf_message_if_mock
  "common_core;pan_tilt_limit_position"
  ptzf_message_if_mock.cpp)
cxx_gmock_executable(ptzf_message_if_test
 "ptzf_message_if;event_router_if_mock"
  test/ptzf_message_if_test.cpp)
add_library_tests(ptzf_message_if ptzf_message_if_test)

cxx_static_library(ptzf_status_if
  "visca_config_core;ptzf_status_infra_if;pan_tilt_value_manager;ptzf_capability_infra_if;ptzf_backup_infra_if"
  ptzf_status_if.cpp)
cxx_static_library(ptzf_config_if
  "visca_config_core;ptzf_status_infra_if;ptzf_config_infra_if;pan_tilt_value_manager;ptzf_capability_infra_if;ptzf_backup_infra_if"
  ptzf_config_if.cpp)
cxx_static_library(ptzf_status_if_mock
  "common_core"
  ptzf_status_if_mock.cpp)
  cxx_static_library(ptzf_config_if_mock
  "common_core"
  ptzf_status_if_mock.cpp)

list(APPEND ptzf_biz_message_if_libs visca_config_core)
list(APPEND ptzf_biz_message_if_libs ptzf_biz_message_infra_if)
list(APPEND ptzf_biz_message_if_libs ptzf_initialize_infra_if)
list(APPEND ptzf_biz_message_if_libs ptzf_finalize_infra_if)
list(APPEND ptzf_biz_message_if_libs ptzf_pan_tilt_infra_if)
list(APPEND ptzf_biz_message_if_libs ptzf_zoom_infra_if)
list(APPEND ptzf_biz_message_if_libs ptzf_focus_infra_if)
list(APPEND ptzf_biz_message_if_libs ptzf_input_infra_if)
cxx_static_library(ptzf_biz_message_if
  "${ptzf_biz_message_if_libs}"
  ptzf_biz_message_if.cpp)
cxx_static_library(ptzf_biz_message_if_mock
  "common_core"
  ptzf_biz_message_if_mock.cpp)

list(APPEND ptzf_biz_message_if_test_libs ptzf_initialize_infra_if_mock)
list(APPEND ptzf_biz_message_if_test_libs ptzf_finalize_infra_if_mock)
list(APPEND ptzf_biz_message_if_test_libs ptzf_biz_message_infra_if_mock)
list(APPEND ptzf_biz_message_if_test_libs ptzf_pan_tilt_infra_if_mock)
list(APPEND ptzf_biz_message_if_test_libs ptzf_zoom_infra_if_mock)
list(APPEND ptzf_biz_message_if_test_libs ptzf_focus_infra_if_mock)
list(APPEND ptzf_biz_message_if_test_libs ptzf_input_infra_if_mock)
list(APPEND ptzf_biz_message_if_test_libs ptzf_initialize_infra_if_mock)
cxx_gmock_executable(ptzf_biz_message_if_test
  "common_core;${ptzf_biz_message_if_test_libs}"
  ptzf_biz_message_if.cpp
  test/ptzf_biz_message_if_test.cpp)
add_library_tests(ptzf_biz_message_if ptzf_biz_message_if_test)

cxx_static_library(ptzf_biz_message_infra_if_mock "common_core" ptzf_biz_message_infra_if_mock.cpp)

cxx_static_library(ptzf_info_notifier
  "common_core"
  ptzf_info_notifier.cpp)
cxx_static_library(ptzf_info_notifier_fake
  "common_core"
  ptzf_info_notifier_fake.cpp)

cxx_static_library(pan_tilt_limit_info_notifier
  "common_core"
  pan_tilt_limit_info_notifier.cpp)
cxx_static_library(pan_tilt_limit_info_notifier_fake
  ""
  pan_tilt_limit_info_notifier_fake.cpp)

if(CMAKE_CROSSCOMPILING)
  cxx_static_library(pan_tilt_limit_position
    "common_core;ptzf_status_if;ptzf_config_if;pan_tilt_value_manager"
   pan_tilt_limit_position.cpp)
else(CMAKE_CROSSCOMPILING)
  cxx_static_library(pan_tilt_limit_position
    "common_core;ptzf_status_if_mock;ptzf_config_if_mock;pan_tilt_value_manager"
   pan_tilt_limit_position.cpp)
endif(CMAKE_CROSSCOMPILING)

cxx_static_library(pan_tilt_limit_controller
  "common_core;ptzf_status_if;ptzf_config_if;pan_tilt_limit_position;pan_tilt_limit_info_notifier;ptzf_pan_tilt_infra_if"
 pan_tilt_limit_controller.cpp)

if(CMAKE_CROSSCOMPILING)
  cxx_executable_no_install(ptzf_controller_message_if_target_test
    "ptzf_message_if;ptzf_status;ptzf_config;ptzf_status_if;ptzf_config_if;ptzf_pan_tilt_infra_if;error_notifier_message_if;common_core;common_main;biz_ptzf_if"
    test/ptzf_controller_message_if_target_test.cpp)
  cxx_executable_no_install(set_standby_mode_target_test
    "common_core;common_main;event_router_if;ptzf_message_if;ptzf_status_if;ptzf_config_if"
    test/set_standby_mode_target_test.cpp)
endif(CMAKE_CROSSCOMPILING)

cxx_static_library(image_flip_notifier "common_core" image_flip_notifier.cpp)

cxx_static_library(pan_tilt_error_notifier
  "common_core"
  pan_tilt_error_notifier.cpp)

list(APPEND ptzf_status_libs visca_config_core)
list(APPEND ptzf_status_libs image_flip_notifier)
list(APPEND ptzf_status_libs pan_tilt_error_notifier)
list(APPEND ptzf_status_libs ptzf_status_infra_if)
list(APPEND ptzf_status_libs ptzf_config_infra_if)
list(APPEND ptzf_status_libs ptzf_debug_info_infra_if)
if (G8_BUILD)
  list(APPEND ptzf_status_libs ptz_updater)
  list(APPEND ptzf_status_libs bizglobal)
endif (G8_BUILD)

cxx_static_library(ptzf_status
  "${ptzf_status_libs}"
  ptzf_status.cpp)
  cxx_static_library(ptzf_config
  "${ptzf_status_libs}"
  ptzf_status.cpp)

if(CMAKE_CROSSCOMPILING)
cxx_gmock_executable(ptzf_status_test
"ptzf_status;error_notifier_message_if_mock;ptzf_capability_infra_if;ptzf_status_if;visca_config_core;common_core;ptzf_backup_infra_if_mock"
test/ptzf_status_test.cpp)
  cxx_gmock_executable(ptzf_config_test
    "ptzf_status;ptzf_config;error_notifier_message_if_mock;ptzf_capability_infra_if;ptzf_status_if;ptzf_config_if;visca_config_core;common_core;ptzf_backup_infra_if_mock"
    test/ptzf_status_test.cpp)
else(CMAKE_CROSSCOMPILING)
  if(APPRC_CAMERA_PROTOCOL_VISCA)
    cxx_gmock_executable(ptzf_status_test
      "ptzf_status;error_notifier_message_if_mock;ptzf_capability_infra_if_g8;ptzf_status_if_g8;ptzf_config_if_g8;visca_config_core;common_core;ptzf_backup_infra_if_mock"
      test/ptzf_status_test.cpp)
    cxx_gmock_executable(ptzf_config_test
      "ptzf_status;ptzf_config;error_notifier_message_if_mock;ptzf_capability_infra_if_g8;ptzf_status_if_g8;ptzf_config_if_g8;visca_config_core;common_core;ptzf_backup_infra_if_mock"
      test/ptzf_status_test.cpp)
  else(APPRC_CAMERA_PROTOCOL_VISCA)
    cxx_gmock_executable(ptzf_status_test
      "ptzf_status;error_notifier_message_if_mock;ptzf_capability_infra_if_marco;ptzf_status_if_marco;visca_config_core;common_core;ptzf_backup_infra_if_mock"
      test/ptzf_status_test.cpp)
      cxx_gmock_executable(ptzf_config_test
      "ptzf_status;ptzf_config;error_notifier_message_if_mock;ptzf_capability_infra_if_marco;ptzf_status_if_marco;ptzf_config_if_marco;visca_config_core;common_core;ptzf_backup_infra_if_mock"
      test/ptzf_status_test.cpp)
  endif(APPRC_CAMERA_PROTOCOL_VISCA)
endif(CMAKE_CROSSCOMPILING)
add_library_tests(ptzf_status ptzf_status_test)
add_library_tests(ptzf_config ptzf_config_test)

cxx_gmock_executable(pan_tilt_limit_position_test
  "pan_tilt_limit_position;ptzf_status_if_mock;ptzf_config_if_mock;image_flip_notifier"
  test/pan_tilt_limit_position_test.cpp)
add_library_tests(pan_tilt_limit_position pan_tilt_limit_position_test)

list(APPEND ptzf_controller_libs ptzf_biz_message_if)
list(APPEND ptzf_controller_libs ptzf_status_if)
list(APPEND ptzf_controller_libs ptzf_config_if)
list(APPEND ptzf_controller_libs ptzf_capability_infra_if)
if (G8_BUID)
    list(APPEND ptzf_controller_libs ptz_updater)
endif (G8_BUID)

list(APPEND ptzf_controller_libs ptzf_initialize_infra_if)
list(APPEND ptzf_controller_libs ptzf_finalize_infra_if)
list(APPEND ptzf_controller_libs ptzf_pan_tilt_infra_if)
list(APPEND ptzf_controller_libs ptzf_zoom_infra_if)
list(APPEND ptzf_controller_libs ptzf_focus_infra_if)
list(APPEND ptzf_controller_libs biz_ptzf_if)
cxx_static_library(ptzf_controller
  "${ptzf_controller_libs}"
  ptzf_controller.cpp)

list(APPEND ptzf_controller_test_libs ptzf_controller)
list(APPEND ptzf_controller_test_libs visca_server_message_if_mock)
list(APPEND ptzf_controller_test_libs common_core)
list(APPEND ptzf_controller_test_libs ptzf_biz_message_if_mock)
list(APPEND ptzf_controller_test_libs ptzf_status_if_mock)
list(APPEND ptzf_controller_test_libs ptzf_config_if_mock)
list(APPEND ptzf_controller_test_libs ptzf_capability_infra_if_mock)
list(APPEND ptzf_controller_test_libs ptzf_initialize_infra_if_mock)
list(APPEND ptzf_controller_test_libs ptzf_finalize_infra_if_mock)
list(APPEND ptzf_controller_test_libs ptzf_pan_tilt_infra_if_mock)
list(APPEND ptzf_controller_test_libs ptzf_zoom_infra_if_mock)
list(APPEND ptzf_controller_test_libs ptzf_focus_infra_if_mock)
list(APPEND ptzf_controller_test_libs pan_tilt_limit_controller)
list(APPEND ptzf_controller_test_libs ptzf_status_infra_if_mock)
list(APPEND ptzf_controller_test_libs ptzf_config_infra_if_mock)
list(APPEND ptzf_controller_test_libs ptz_trace_if_mock)
list(APPEND ptzf_controller_test_libs error_notifier_message_if)
list(APPEND ptzf_controller_test_libs database_initialize_if)
list(APPEND ptzf_controller_test_libs ptzf_info_notifier)
list(APPEND ptzf_controller_test_libs event_router_receiver)
list(APPEND ptzf_controller_test_libs ptzf_controller_initializer)
list(APPEND ptzf_controller_test_libs pt_micon_power_infra_if)
list(APPEND ptzf_controller_test_libs ptzf_controller_finalizer_mock)
list(APPEND ptzf_controller_test_libs preset_manager_message_if_mock)
list(APPEND ptzf_controller_test_libs ptz_trace_controller_dummy)
list(APPEND ptzf_controller_test_libs ptzf_if_clear_infra_if_mock)
list(APPEND ptzf_controller_test_libs ptzf_initialize_infra_if_mock)
list(APPEND ptzf_controller_test_libs ptzf_initializer_infra_if_mock)
list(APPEND ptzf_controller_test_libs ptzf_pan_tilt_lock_infra_if_mock)
list(APPEND ptzf_controller_test_libs ptzf_message_if_mock)
list(APPEND ptzf_controller_test_libs power_status_if_mock)
list(APPEND ptzf_controller_test_libs visca_server_internal_mode_manager)
list(APPEND ptzf_controller_test_libs visca_status_if_mock)
list(APPEND ptzf_controller_test_libs preset_status_if_mock)
list(APPEND ptzf_controller_test_libs video_status_if_mock)
list(APPEND ptzf_controller_test_libs menu_status_mock)
list(APPEND ptzf_controller_test_libs ptz_trace_status_if_mock)
list(APPEND ptzf_controller_test_libs camera_osd_status_if_mock)
#list(APPEND ptzf_controller_test_libs ptzf_controller_message_handler)
cxx_gmock_executable(ptzf_controller_test
  "${ptzf_controller_test_libs}"
  test/ptzf_controller_test.cpp
  test/ptz_updater_mock.cpp
  ptzf_controller_message_handler.cpp
  ptzf_controller_power_request_event_listener.cpp
  ptzf_controller_thread.cpp
  infra/sequence_id_controller_mock.cpp)
add_library_tests(ptzf_controller ptzf_controller_test)

cxx_static_library(ptzf_controller_mock "common_core" ptzf_controller_mock.cpp)

list(APPEND pan_tilt_limit_controller_test_libs pan_tilt_limit_controller)
list(APPEND pan_tilt_limit_controller_test_libs ptzf_status)
list(APPEND pan_tilt_limit_controller_test_libs ptzf_config)
list(APPEND pan_tilt_limit_controller_test_libs error_notifier_message_if_mock)
list(APPEND pan_tilt_limit_controller_test_libs ptzf_status_if)
list(APPEND pan_tilt_limit_controller_test_libs ptzf_config_if)
list(APPEND pan_tilt_limit_controller_test_libs ptzf_pan_tilt_infra_if_mock)
list(APPEND pan_tilt_limit_controller_test_libs pan_tilt_limit_position)
list(APPEND pan_tilt_limit_controller_test_libs pan_tilt_limit_info_notifier_fake)
list(APPEND pan_tilt_limit_controller_test_libs visca_server_message_if_mock)
list(APPEND pan_tilt_limit_controller_test_libs common_core)
list(APPEND pan_tilt_limit_controller_test_libs common_timer)


cxx_gmock_executable(pan_tilt_limit_controller_test
  "${pan_tilt_limit_controller_test_libs}"
 test/pan_tilt_limit_controller_test.cpp)
add_library_tests(pan_tilt_limit_controller pan_tilt_limit_controller_test)

cxx_static_library(ptzf_trace "common_core" ptzf_trace_if.cpp)

# ptz trace
list(APPEND ptz_trace_controller_libs ptz_trace_data_manager)
list(APPEND ptz_trace_controller_libs ptz_trace_status)
list(APPEND ptz_trace_controller_libs ptz_trace_status_if)
list(APPEND ptz_trace_controller_libs ptz_trace_status)
list(APPEND ptz_trace_controller_libs ptz_trace_if)
list(APPEND ptz_trace_controller_libs pan_tilt_error_notifier)
list(APPEND ptz_trace_controller_libs ptzf_status_if)
list(APPEND ptz_trace_controller_libs ptzf_config_if)
list(APPEND ptz_trace_controller_libs visca_server_message_if)
list(APPEND ptz_trace_controller_libs visca_status_if)
list(APPEND ptz_trace_controller_libs preset_status_if)
list(APPEND ptz_trace_controller_libs video_status_if)
list(APPEND ptz_trace_controller_libs menu_status)
list(APPEND ptz_trace_controller_libs camera_osd_status_if)
list(APPEND ptz_trace_controller_libs common_core)
list(APPEND ptz_trace_controller_libs metadata_collection_status)
list(APPEND ptz_trace_controller_libs metadata_updater_if)
cxx_static_library(ptz_trace_controller
  "${ptz_trace_controller_libs}"
  ptz_trace_controller.cpp
  ptz_trace_event_listener_pan_tilt_error.cpp)

list(APPEND ptz_trace_controller_thread_libralies ptzf_status_if)
list(APPEND ptz_trace_controller_thread_libralies ptzf_config_if)
list(APPEND ptz_trace_controller_thread_libralies ptz_trace_info_notifier)
list(APPEND ptz_trace_controller_thread_libralies video_status_if)
list(APPEND ptz_trace_controller_thread_libralies power_status_if)
list(APPEND ptz_trace_controller_thread_libralies visca_parameter_holder)
list(APPEND ptz_trace_controller_thread_libralies internal_visca_packet_generator)
list(APPEND ptz_trace_controller_thread_libralies model_info_rc)
list(APPEND ptz_trace_controller_thread_libralies ptz_trace_status_backup_infra_if)
if(CMAKE_CROSSCOMPILING)
list(APPEND ptz_trace_controller_thread_libralies ptz_trace_fcb_controller_thread)
list(APPEND ptz_trace_controller_thread_libralies ptz_trace_pan_tilt_controller_thread)
list(APPEND ptz_trace_controller_thread_libralies metadata_collector_if)
else(CMAKE_CROSSCOMPILING)
list(APPEND ptz_trace_controller_thread_libralies ptz_trace_data_manager)
list(APPEND ptz_trace_controller_thread_libralies ptz_trace_status)
list(APPEND ptz_trace_controller_thread_libralies ptz_trace_status_if)
list(APPEND ptz_trace_controller_thread_libralies visca_server_message_if)
list(APPEND ptz_trace_controller_thread_libralies common_core)
list(APPEND ptz_trace_controller_thread_libralies ptz_trace_fcb_controller_thread_dummy)
list(APPEND ptz_trace_controller_thread_libralies ptz_trace_pan_tilt_controller_thread_dummy)
list(APPEND ptz_trace_controller_thread_libralies metadata_collector_if_fake)
list(APPEND ptz_trace_controller_thread_libralies biz_ptzf_if)
endif(CMAKE_CROSSCOMPILING)
cxx_static_library(ptz_trace_controller_thread
  "${ptz_trace_controller_thread_libralies}"
  ptz_trace_controller_thread.cpp)

list(APPEND ptz_trace_controller_worker_thread_libs ptz_trace_data_manager)
list(APPEND ptz_trace_controller_worker_thread_libs ptzf_status)
list(APPEND ptz_trace_controller_worker_thread_libs ptzf_config)
list(APPEND ptz_trace_controller_worker_thread_libs error_notifier_message_if)
list(APPEND ptz_trace_controller_worker_thread_libs ptz_trace_status)
list(APPEND ptz_trace_controller_worker_thread_libs ptz_trace_status_if)
list(APPEND ptz_trace_controller_worker_thread_libs visca_server_message_if)
list(APPEND ptz_trace_controller_worker_thread_libs visca_status_if)
list(APPEND ptz_trace_controller_worker_thread_libs common_core)
list(APPEND ptz_trace_controller_worker_thread_libs common_timer)
cxx_static_library(ptz_trace_fcb_controller_thread
  "${ptz_trace_controller_worker_thread_libs}"
  ptz_trace_fcb_controller_thread.cpp)

cxx_static_library(ptz_trace_fcb_controller_thread_dummy
  ""
  ptz_trace_fcb_controller_thread_dummy.cpp)

cxx_static_library(ptz_trace_pan_tilt_controller_thread
  "${ptz_trace_controller_worker_thread_libs}"
  ptz_trace_pan_tilt_controller_thread.cpp)

cxx_static_library(ptz_trace_pan_tilt_controller_thread_dummy
  "common_timer;visca_server_message_if"
  ptz_trace_pan_tilt_controller_thread_dummy.cpp)

list(APPEND ptz_trace_controller_test_libs ptz_trace_controller)
list(APPEND ptz_trace_controller_test_libs ptz_trace_controller_thread)
list(APPEND ptz_trace_controller_test_libs event_router_receiver)
list(APPEND ptz_trace_controller_test_libs visca_server_message_if_mock)
list(APPEND ptz_trace_controller_test_libs ptz_trace_status_if_mock)
list(APPEND ptz_trace_controller_test_libs video_status_if_mock)
list(APPEND ptz_trace_controller_test_libs ptz_trace_if_mock)
list(APPEND ptz_trace_controller_test_libs ptzf_status_if_mock)
list(APPEND ptz_trace_controller_test_libs ptzf_config_if_mock)
list(APPEND ptz_trace_controller_test_libs pan_tilt_error_notifier)
list(APPEND ptz_trace_controller_test_libs visca_status_if_mock)
list(APPEND ptz_trace_controller_test_libs preset_status_if_mock)
list(APPEND ptz_trace_controller_test_libs video_status_if_mock)
list(APPEND ptz_trace_controller_test_libs menu_status_mock)
list(APPEND ptz_trace_controller_test_libs camera_osd_status_if_mock)
list(APPEND ptz_trace_controller_test_libs common_core)
list(APPEND ptz_trace_controller_test_libs common_timer)
list(APPEND ptz_trace_controller_test_libs ptzf_biz_message_if_mock)
if (NOT CMAKE_CROSSCOMPILING)
  list(APPEND ptz_trace_controller_test_libs metadata_collector_if_fake)
else(NOT CMAKE_CROSSCOMPILING)
  list(APPEND ptz_trace_controller_test_libs metadata_collector_if)
endif (NOT CMAKE_CROSSCOMPILING)
cxx_gmock_executable(ptz_trace_controller_test
  "${ptz_trace_controller_test_libs}"
 test/ptz_trace_controller_test.cpp)
add_library_tests(ptz_trace_controller ptz_trace_controller_test)

list(APPEND ptz_trace_controller_thread_test_libs ptz_trace_controller_thread)
list(APPEND ptz_trace_controller_thread_test_libs visca_server_message_if_mock)
list(APPEND ptz_trace_controller_thread_test_libs ptzf_status_if_mock)
list(APPEND ptz_trace_controller_thread_test_libs ptzf_config_if_mock)
list(APPEND ptz_trace_controller_thread_test_libs ptz_trace_data_manager_mock)
list(APPEND ptz_trace_controller_thread_test_libs video_status_if_mock)
list(APPEND ptz_trace_controller_thread_test_libs visca_parameter_holder_fake)
list(APPEND ptz_trace_controller_thread_test_libs common_core)
list(APPEND ptz_trace_controller_thread_test_libs common_timer)
list(APPEND ptz_trace_controller_thread_test_libs ptzf_biz_message_if_mock)
if (NOT CMAKE_CROSSCOMPILING)
  list(APPEND ptz_trace_controller_thread_test_libs metadata_collector_if_fake)
else(NOT CMAKE_CROSSCOMPILING)
  list(APPEND ptz_trace_controller_thread_test_libs metadata_collector_if)
endif (NOT CMAKE_CROSSCOMPILING)
cxx_gmock_executable(ptz_trace_controller_thread_test
  "${ptz_trace_controller_thread_test_libs}"
  test/ptz_trace_controller_thread_test.cpp)
add_library_tests(ptz_trace_controller_thread ptz_trace_controller_thread_test)

cxx_gmock_executable(ptz_trace_fcb_controller_thread_test
  "ptz_trace_fcb_controller_thread;visca_server_message_if_mock;ptzf_status_if_mock;ptzf_config_if_mock"
  test/ptz_trace_fcb_controller_thread_test.cpp)
add_library_tests(ptz_trace_fcb_controller_thread ptz_trace_fcb_controller_thread_test)

cxx_gmock_executable(ptz_trace_pan_tilt_controller_thread_test
  "ptz_trace_pan_tilt_controller_thread;visca_server_message_if_mock"
  test/ptz_trace_pan_tilt_controller_thread_test.cpp)
add_library_tests(ptz_trace_pan_tilt_controller_thread ptz_trace_pan_tilt_controller_thread_test)

cxx_static_library(ptz_trace_controller_dummy
  ""
  ptz_trace_controller_dummy.cpp)

cxx_static_library(ptz_trace_data
  "common_core"
  ptz_trace_record_data.cpp
  ptz_trace_playback_data.cpp)
cxx_gmock_executable(ptz_trace_data_test
  "ptz_trace_data;common_core;common_file_operation"
  test/ptz_trace_data_test.cpp)
add_library_tests(ptz_trace_data ptz_trace_data_test)

cxx_static_library(ptz_trace_data_manager_mock
  "common_core"
  ptz_trace_data_manager_mock.cpp
  ptz_trace_record_data_mock.cpp
  ptz_trace_playback_data_mock.cpp)


list(APPEND ptz_trace_data_manager_libs ptz_trace_data)
list(APPEND ptz_trace_data_manager_libs common_core)
list(APPEND ptz_trace_data_manager_libs common_file_operation)
list(APPEND ptz_trace_data_manager_libs ptz_trace_backup_infra_if)
cxx_static_library(ptz_trace_data_manager
  "${ptz_trace_data_manager_libs}"
  ptz_trace_data_manager.cpp)

cxx_gmock_executable(ptz_trace_data_manager_test
  "ptz_trace_data;ptz_trace_data_manager;ptz_trace_backup_infra_if_mock"
  test/ptz_trace_data_manager_test.cpp)
add_library_tests(ptz_trace_data_manager ptz_trace_data_manager_test)

cxx_static_library(ptz_trace_if
  "event_router_if;common_core;ptzf_status_if;ptzf_config_if"
  ptz_trace_if.cpp)
cxx_static_library(ptz_trace_if_mock
  "common_core"
  ptz_trace_if_mock.cpp)
cxx_gmock_executable(ptz_trace_if_test
  "ptz_trace_if;ptz_trace_status_if_mock"
  test/ptz_trace_if_test.cpp)
add_library_tests(ptz_trace_if ptz_trace_if_test)

cxx_static_library(ptz_trace_notice_position_if
  "common_core;ptz_trace_status_if"
  ptz_trace_notice_position_if.cpp)
cxx_static_library(ptz_trace_notice_position_if_mock
  "common_core"
  ptz_trace_notice_position_if_mock.cpp)
cxx_gmock_executable(ptz_trace_notice_position_if_test
  "ptz_trace_notice_position_if;ptz_trace_status_if_mock"
  test/ptz_trace_notice_position_if_test.cpp)
add_library_tests(ptz_trace_notice_position_if ptz_trace_notice_position_if_test)

cxx_static_library(ptz_trace_status_if
  "visca_config_core;common_core;ptz_trace_data;ptz_trace_backup_infra_if;ptz_trace_status_infra_if;ptz_trace_status_backup_infra_if"
  ptz_trace_status_if.cpp)
cxx_static_library(ptz_trace_status_if_mock
  "common_core"
  ptz_trace_status_if_mock.cpp)
cxx_gmock_executable(ptz_trace_status_if_test
  "ptz_trace_status_if;ptz_trace_backup_infra_if_mock;ptz_trace_status_infra_if_mock"
  test/ptz_trace_status_if_test.cpp)
add_library_tests(ptz_trace_status_if ptz_trace_status_if_test)

list(APPEND ptz_trace_status_libs visca_config_core)
list(APPEND ptz_trace_status_libs common_core)
list(APPEND ptz_trace_status_libs ptz_trace_status_infra_if)
if (G8_BUILD)
list(APPEND ptz_trace_status_libs ptz_trace_updater)
endif (G8_BUILD)
cxx_static_library(ptz_trace_status
  "${ptz_trace_status_libs}"
  ptz_trace_status.cpp)

list(APPEND ptz_trace_status_test_libs ptz_trace_status)
list(APPEND ptz_trace_status_test_libs ptz_trace_status_if)
if (G8_BUILD)
list(APPEND ptz_trace_status_test_libs ptz_trace_updater)
endif (G8_BUILD)
cxx_gmock_executable(ptz_trace_status_test
  "${ptz_trace_status_test_libs}"
  test/ptz_trace_status_test.cpp)
add_library_tests(ptz_trace_status ptz_trace_status_test)
cxx_static_library(ptz_trace_info_notifier
  "common_core"
  ptz_trace_info_notifier.cpp)

if (G8_BUILD)
  include_directories("${G8RC_SOURCE_DIR}/../export")
  cxx_static_library(ptz_updater "common_core;bizglobal"
    ptz_updater.cpp
  )
  cxx_gmock_executable(ptz_updater_test "ptz_updater"
    test/ptz_updater_test.cpp
  )
  add_library_tests(ptz_updater ptz_updater_test)

if(CMAKE_CROSSCOMPILING)
  include_directories("${G8RC_SOURCE_DIR}/../export")
  cxx_static_library(ptz_trace_updater "common_core;bizglobal"
    ptz_trace_updater.cpp
  )
else(CMAKE_CROSSCOMPILING)
  cxx_static_library(ptz_trace_updater ""
    ptz_trace_updater_fake.cpp
  )
endif(CMAKE_CROSSCOMPILING)
endif (G8_BUILD)

# infra_if impl
add_subdirectory(infra)

if(NOT CMAKE_CROSSCOMPILING)
  cxx_static_library(ptz_trace_backup_infra_if "" ptz_trace_backup_infra_if_fake.cpp)
  cxx_static_library(ptz_trace_status_infra_if "" ptz_trace_status_infra_if_fake.cpp)
  cxx_static_library(ptzf_debug_info_infra_if "" ptzf_debug_info_infra_if_fake.cpp)
  cxx_static_library(ptzf_status_infra_if "" ptzf_status_infra_if_fake.cpp)
  cxx_static_library(ptzf_config_infra_if "" ptzf_config_infra_if_fake.cpp)
  cxx_static_library(ptzf_biz_message_infra_if "" ptzf_biz_message_infra_if_fake.cpp)
  cxx_static_library(ptzf_capability_infra_if "ptzf_status_infra_if;ptzf_config_infra_if" ptzf_capability_infra_if_fake.cpp)
  cxx_static_library(ptzf_capability_infra_if_g8 "ptzf_status_infra_if;ptzf_config_infra_if" ptzf_capability_infra_if_g8_fake.cpp)
  cxx_static_library(ptzf_capability_infra_if_marco "ptzf_status_infra_if;ptzf_config_infra_if" ptzf_capability_infra_if_marco_fake.cpp)
  cxx_static_library(pt_micon_power_infra_if
    "ptzf_message_if"
    pt_micon_power_infra_if_fake.cpp)
  cxx_static_library(ptzf_backup_infra_if "" ptzf_backup_infra_if_fake.cpp)
  cxx_static_library(ptzf_initialize_infra_if "" ptzf_initialize_infra_if_fake.cpp)
  cxx_static_library(ptzf_finalize_infra_if "" ptzf_finalize_infra_if_fake.cpp)
  cxx_static_library(ptzf_pan_tilt_infra_if "" ptzf_pan_tilt_infra_if_fake.cpp)
  cxx_static_library(ptzf_zoom_infra_if "" ptzf_zoom_infra_if_fake.cpp)
  cxx_static_library(ptzf_focus_infra_if "" ptzf_focus_infra_if_fake.cpp)
  cxx_static_library(ptzf_if_clear_infra_if "" ptzf_if_clear_infra_if_fake.cpp)
  cxx_static_library(ptzf_pan_tilt_lock_infra_if "" ptzf_pan_tilt_lock_infra_if_fake.cpp)
  if(G8_BUILD)
    if(APPRC_CAMERA_PROTOCOL_VISCA)
      cxx_static_library(ptzf_status_if_g8
        "visca_config_core;ptzf_status_infra_if;ptzf_config_infra_if;pan_tilt_value_manager;ptzf_capability_infra_if_g8;ptzf_backup_infra_if"
        ptzf_status_if.cpp)
      cxx_static_library(ptzf_config_if_g8
        "visca_config_core;pan_tilt_value_manager;ptzf_capability_infra_if_g8;ptzf_backup_infra_if"
        ptzf_config_if.cpp)
    else(APPRC_CAMERA_PROTOCOL_VISCA)
      cxx_static_library(ptzf_status_if_marco
        "visca_config_core;ptzf_status_infra_if;ptzf_config_infra_if;pan_tilt_value_manager;ptzf_capability_infra_if_marco;ptzf_backup_infra_if"
        ptzf_status_if.cpp)
      cxx_static_library(ptzf_config_if_marco
        "visca_config_core;ptzf_status_infra_if;ptzf_config_infra_if;pan_tilt_value_manager;ptzf_capability_infra_if_marco;ptzf_backup_infra_if"
        ptzf_config_if.cpp)
    endif(APPRC_CAMERA_PROTOCOL_VISCA)
  endif(G8_BUILD)
else(NOT CMAKE_CROSSCOMPILING)
  if(NOT DIADEM_BUILD)
    cxx_static_library_if_no_impl(ptz_trace_backup_infra_if "" ptz_trace_backup_infra_if_fake.cpp)
    cxx_static_library_if_no_impl(ptz_trace_status_infra_if "" ptz_trace_status_infra_if_fake.cpp)
  endif(NOT DIADEM_BUILD)
  cxx_static_library_if_no_impl(ptzf_backup_infra_if "" ptzf_backup_infra_if_fake.cpp)
endif(NOT CMAKE_CROSSCOMPILING)

cxx_static_library(ptz_trace_backup_infra_if_mock "" ptz_trace_backup_infra_if_mock.cpp)
cxx_static_library(ptz_trace_status_infra_if_mock "" ptz_trace_status_infra_if_mock.cpp)
cxx_static_library(ptzf_debug_info_infra_if_mock "" ptzf_debug_info_infra_if_mock.cpp)
cxx_static_library(ptzf_status_infra_if_mock "" ptzf_status_infra_if_mock.cpp)
cxx_static_library(ptzf_config_infra_if_mock "" ptzf_config_infra_if_mock.cpp)
cxx_static_library(ptzf_capability_infra_if_mock "" ptzf_capability_infra_if_mock.cpp)
cxx_static_library(ptzf_initializer_infra_if_mock "" ptzf_initializer_infra_if_mock.cpp)
cxx_static_library(ptzf_finalizer_infra_if_mock "" ptzf_finalizer_infra_if_mock.cpp)
cxx_static_library(ptzf_backup_infra_if_mock "" ptzf_backup_infra_if_mock.cpp)
cxx_static_library(ptzf_initialize_infra_if_mock "" ptzf_initialize_infra_if_mock.cpp)
cxx_static_library(ptzf_finalize_infra_if_mock "" ptzf_finalize_infra_if_mock.cpp)
cxx_static_library(ptzf_pan_tilt_infra_if_mock "" ptzf_pan_tilt_infra_if_mock.cpp)
cxx_static_library(ptzf_zoom_infra_if_mock "" ptzf_zoom_infra_if_mock.cpp)
cxx_static_library(ptzf_focus_infra_if_mock "" ptzf_focus_infra_if_mock.cpp)
cxx_static_library(ptzf_if_clear_infra_if_mock "" ptzf_if_clear_infra_if_mock.cpp)
cxx_static_library(ptzf_input_infra_if_mock "" ptzf_input_infra_if_mock.cpp)
cxx_static_library(ptzf_pan_tilt_lock_infra_if_mock "" ptzf_pan_tilt_lock_infra_if_mock.cpp)

if(CMAKE_CROSSCOMPILING)
  cxx_executable_no_install(ptz_trace_data_import
    "common_core;common_main;ptz_trace_data;ptz_trace_backup_infra_if"
    test/ptz_trace_data_import.cpp)
  cxx_executable_no_install(ptz_trace_data_export
    "common_core;common_main;ptz_trace_data;ptz_trace_backup_infra_if"
    test/ptz_trace_data_export.cpp)
  cxx_executable_no_install(ptz_trace_data_remove
    "common_core;common_main;ptz_trace_data;ptz_trace_backup_infra_if"
    test/ptz_trace_data_remove.cpp)
  cxx_executable_no_install(ptz_trace_data_recover
    "common_core;common_main;ptz_trace_data;ptz_trace_backup_infra_if"
    test/ptz_trace_data_recover.cpp)
  cxx_executable_no_install(ptz_trace_data_viewer
   "visca_config_core;common_core;common_file_operation;common_main"
   test/ptz_trace_data_viewer.cpp)
  cxx_executable_no_install(ptz_trace_common_data_viewer
   "visca_config_core;common_core;common_main;ptz_trace_data_manager;ptz_trace_data;ptz_trace_backup_infra_if"
   test/ptz_trace_common_data_viewer.cpp)
endif(CMAKE_CROSSCOMPILING)

cxx_static_library(pan_tilt_value_manager
  "common_core;ptzf_capability_infra_if"
  pan_tilt_value_manager.cpp)
cxx_gmock_executable(pan_tilt_value_manager_test
 "pan_tilt_value_manager;ptzf_status_if_mock;ptzf_config_if_mock;ptzf_capability_infra_if_mock"
 test/pan_tilt_value_manager_test.cpp)
add_library_tests(pan_tilt_value_manager pan_tilt_value_manager_test)

#
# PtMiconCommunicator
#
if(NOT CMAKE_CROSSCOMPILING)
  cxx_static_library(pt_micon_vsync_notifier_infra_if "" pt_micon_vsync_notifier_infra_if_fake.cpp)
  cxx_static_library(pt_micon_spi_infra_if "" pt_micon_spi_infra_if_fake.cpp)
else(NOT CMAKE_CROSSCOMPILING)
  cxx_static_library_if_no_impl(pt_micon_vsync_notifier_infra_if "" pt_micon_vsync_notifier_infra_if_fake.cpp)
  cxx_static_library_if_no_impl(pt_micon_spi_infra_if "" pt_micon_spi_infra_if_fake.cpp)
endif(NOT CMAKE_CROSSCOMPILING)
cxx_static_library(pt_micon_vsync_notifier_infra_if_mock "" pt_micon_vsync_notifier_infra_if_mock.cpp)
cxx_static_library(pt_micon_spi_infra_if_mock "" pt_micon_spi_infra_if_mock.cpp)

cxx_static_library(pt_micon_visca_if
  "common_core;pt_micon_communicator"
  pt_micon_visca_if.cpp
)
cxx_static_library(pt_micon_visca_if_mock "" pt_micon_visca_if_mock.cpp)
cxx_gmock_executable(pt_micon_visca_if_test
  "pt_micon_visca_if;pt_micon_communicator_mock"
  test/pt_micon_visca_if_test.cpp
)
add_library_tests(pt_micon_visca_if pt_micon_visca_if_test)

cxx_static_library(pt_micon_communicator
  "common_core;vsync_notifier_infra_if;pt_micon_spi_infra_if;pt_micon_vsync_notifier_infra_if;pt_micon_debug_log"
  pt_micon_communicator.cpp
)
cxx_static_library(pt_micon_communicator_mock
  "common_core"
  pt_micon_communicator_mock.cpp
)
cxx_gmock_executable(pt_micon_communicator_test
  "pt_micon_communicator;pt_micon_vsync_notifier_infra_if_mock;pt_micon_spi_infra_if_mock;pt_micon_debug_log_mock"
  test/pt_micon_communicator_test.cpp
)
add_library_tests(pt_micon_communicator pt_micon_communicator_test)

#
# PtMiconDebugLog modules
#
cxx_object_library(pt_micon_debug_log_trace_writer_obj "" pt_micon_debug_log_trace_writer.cpp)
cxx_object_library(pt_micon_debug_log_trace_writer_mock_obj "" pt_micon_debug_log_trace_writer_mock.cpp)
cxx_object_library(pt_micon_debug_log_ring_buffer_controller_obj "" pt_micon_debug_log_ring_buffer_controller.cpp)
cxx_object_library(pt_micon_debug_log_ring_buffer_controller_mock_obj "" pt_micon_debug_log_ring_buffer_controller_mock.cpp)

cxx_object_library(pt_micon_debug_log_obj "" pt_micon_debug_log.cpp)
cxx_static_library(pt_micon_debug_log
  "common_core"
  $<TARGET_OBJECTS:pt_micon_debug_log_obj>
  $<TARGET_OBJECTS:pt_micon_debug_log_trace_writer_obj>
  $<TARGET_OBJECTS:pt_micon_debug_log_ring_buffer_controller_obj>
)
cxx_static_library(pt_micon_debug_log_mock
  ""
  pt_micon_debug_log_mock.cpp
)
cxx_gmock_executable(pt_micon_debug_log_test
  ""
  $<TARGET_OBJECTS:pt_micon_debug_log_obj>
  $<TARGET_OBJECTS:pt_micon_debug_log_trace_writer_mock_obj>
  $<TARGET_OBJECTS:pt_micon_debug_log_ring_buffer_controller_mock_obj>
  test/pt_micon_debug_log_test.cpp
)
add_library_tests(pt_micon_debug_log pt_micon_debug_log_test)
cxx_gmock_executable(pt_micon_debug_log_mutex_test
  ""
  $<TARGET_OBJECTS:pt_micon_debug_log_obj>
  $<TARGET_OBJECTS:pt_micon_debug_log_trace_writer_obj>
  $<TARGET_OBJECTS:pt_micon_debug_log_ring_buffer_controller_mock_obj>
  test/pt_micon_debug_log_mutex_test.cpp
)
add_library_tests(pt_micon_debug_log pt_micon_debug_log_mutex_test)

cxx_gmock_executable(pt_micon_debug_log_ring_buffer_controller_test
  ""
  $<TARGET_OBJECTS:pt_micon_debug_log_ring_buffer_controller_obj>
  test/pt_micon_debug_log_ring_buffer_controller_test.cpp
)
add_library_tests(pt_micon_debug_log_ring_buffer_controller pt_micon_debug_log_ring_buffer_controller_test)

if(CMAKE_CROSSCOMPILING)
  cxx_executable_no_install(pt_micon_visca_server_target_test
    "common_main;common_core;pt_micon_communicator;pt_micon_visca_if"
    test/pt_micon_visca_server_target_test.cpp)
  cxx_executable_no_install(pt_micon_visca_sender_target_test
    "common_main;common_core"
    test/pt_micon_visca_sender_target_test.cpp)
  cxx_executable_no_install(pt_micon_debug_log_target_test
    "common_main;common_core;pt_micon_debug_log"
    test/pt_micon_debug_log_target_test.cpp)
endif(CMAKE_CROSSCOMPILING)

enable_coverage_report()
enable_coverity()
enable_verify_coding_rule("./")
